# libNMEA0183

./: CMakeLists.txt  LICENSE  README.md
cmake/: libnmea0183-config.cmake.in
examples/: test.cpp
include/: error.h  nmea0183.h
src/: nmea0183.cpp
